--- a/02 - Complexidade/Complexidade.tex
+++ b/02 - Complexidade/Complexidade.tex
@@ -908,5 +908,81 @@
     \end{center}
 \end{frame}
 
+
+\begin{frame}[t]
+    \frametitle{Exemplo: Complexidade $\Theta$}
+
+    Verifique se:
+
+    $$\lg n\ \text{é}\ \Theta(\log_{10} n)$$
+
+    Para ser $\Theta(\log_{10} n)$, a seguinte inequação deverá ser válida para um $c_1$ e $c_2$ positivos escolhidos arbitrariamente.
+
+    $$0<c_1\log_{10}n \leq \lg{n}\leq c_2g(n)\log_{10}$$
+
+    Devemos então resolver separadamente estas inequações sabendo que: $$\log_{10}n = \frac{\lg{n}}{\lg{10}}$$
+
+\end{frame}
+
+
+\begin{frame}[t]
+    \frametitle{Exemplo: Complexidade $\Theta$}
+    \begin{columns}
+        \begin{column}{0.5\textwidth}
+            Parte 1:
+            $$c_1\log_{10}n \leq \lg{n}$$
+            \begin{align*}
+                c_1\frac{\lg{n}}{\lg{10}} & \leq \lg{n}  \\
+                c_1                       & \leq \lg{10}
+            \end{align*}
+        \end{column}
+        \begin{column}{0.5\textwidth}
+            Parte 2:
+            $$\lg{n} \leq c_2\log_{10}n $$
+            \begin{align*}
+                \lg{n} & \leq c_2\frac{\lg{n}}{\lg{10}} \\
+                c_2    & \geq \lg{10}
+            \end{align*}
+        \end{column}
+    \end{columns}
+    \pause Ou seja, podemos escolher os valores:
+    \begin{align*}
+        c_1 = 2 & \leq \lg 10 \\
+        c_2 = 3 & \geq \lg 10
+    \end{align*}
+
+    \pause Deste modo, a partir de $n_0 > 0$\footnote{Verifique esta afirmação}:
+
+    $$0<c_1\log_{10}n \leq \lg{n}\leq c_2g(n)\log_{10}$$
+
+
+\end{frame}
+
+\begin{frame} % Criação do frame
+    \frametitle{Exemplo: Complexidade $\Theta$}
+    \begin{center}
+
+        \begin{tikzpicture}[x=35]
+            % Eixos
+            \draw[-latex] (-1,0) -- (7,0) node[right] {$n$};
+            \draw[-latex] (0,-1) -- (0,4) node[above] {$f(n)$};
+
+            % Linha do gráfico
+            \draw<1->[domain=1:6,smooth,variable=\x,blue!50] plot ({\x},{3*log10(\x)}) node[above] {\small$3\log_{10} n$};
+            \draw<3->[domain=1:6,smooth,variable=\x,red, very thick] plot ({\x},{log10(\x)/log10(2.71)})node[right] {\small$\lg n$};
+            \draw<2->[domain=1:6,smooth,variable=\x,blue!50] plot ({\x},{2*log10(\x)}) node[below] {\small$2\log_{10} n$};
+
+            % Marcações nos eixos
+            \foreach \x in {1,...,6}
+            \draw (\x,-0.1) -- (\x,0.1) node[below, yshift=-5] {\x};
+            \foreach \y in {1,...,3}
+            \draw (-0.1,\y) -- (0.1,\y) node[left, xshift=-5] {\y};
+
+        \end{tikzpicture}
+
+    \end{center}
+
+\end{frame}
+
 \end{document}
 
