--- a/02 - Complexidade/Complexidade.tex
+++ b/02 - Complexidade/Complexidade.tex
@@ -20,7 +20,7 @@
 \usepackage{arydshln}
 \usepackage{enumitem}
 \pgfplotsset{compat=1.18}
-
+\setlist[itemize]{label=\textbullet}
 
 \lstset{
   language=C++,
