Remoção de comentários

--- a/02 - Complexidade/Complexidade.tex
+++ b/02 - Complexidade/Complexidade.tex
@@ -10,7 +10,7 @@
 \usepackage{calc}
 \usetikzlibrary{calc}
 \usepackage{fp}
-\usepackage{listings} 
+\usepackage{listings} % Pacote para destacar código fonte
 \usepackage{amsmath} 
 \usepackage{amssymb} 
 \usepackage{helvet}
@@ -25,10 +25,10 @@
 \lstset{
   language=C++,
   basicstyle=\small\ttfamily,
-  numbers=left, % Adiciona a numeração nas linhas
-  numberstyle=\tiny, % Estilo da numeração (pequena)
-  stepnumber=1, % Incremento da numeração
-  numbersep=-30pt, % Espaçamento entre a numeração e o código (valor negativo)
+  numbers=left, 
+  numberstyle=\tiny, 
+  stepnumber=1, 
+  numbersep=-30pt, 
 }
 
 \newcommand{\codecppNoTitle}[2][0.6]{
